bad/var_decl_init_invalid_conversion_int_class.example_compiler_output
ERROR
[1mbad/var_decl_init_invalid_conversion_int_class.lat:5:8: [1;31merror: [0;1mincompatible types: cannot assign variable of type `int` with an expression of type `Y`[m
	int x = new Y;
	      [1;32m^[m
